[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Ruchita Potamsetti", email = "potamsetvssruchi@ufl.edu"}]
name = "cis6930sp25-project2"
version = "0.1.0"
description = "Project Two from ruchipotamsetti -- Spring 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.0.1",
    "pymupdf>=1.25.4",
    "spacy>=3.8.4",
]

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/project/2"
repository = "https://github.com/ruchipotamsetti/cis6930sp25-project2"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
